--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
     margin: 0px auto;
     padding: 0px auto;
 }
-.row-containt{
+.row-content{
     margin: 0px auto;
     padding: 50px 0px 50px 0px;
     border-bottom: 1px ridge;
@@ -38,4 +38,17 @@ body{
     border-right: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
     padding: 10px;
+}
+.carousel{
+    background: #512DA8;
+
+}
+.carousel-item{
+    height: 300px;
+}
+.carousel-item img{
+    position: absolute;
+    top:0;
+    left: 0;
+    min-height: 300px;
 }
