--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,17 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+.modal-header {
+  background: #512DA8;
+  border-color: #512DA8;
+  color: floralwhite; }
+  .modal-header .close {
+    color: floralwhite; }
+
+.modal-body {
+  background: #D1C4E9;
+  border-color: #D1C4E9; }
+.org{
+  color: orangered;
+}
